tests/baselines/reference/externalModuleRefernceResolutionOrderInImportDeclaration.errors.txt
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file3.ts (1 errors) ====
    ///<reference path='externalModuleRefernceResolutionOrderInImportDeclaration_file2.ts'/>
    import file1 = require('externalModuleRefernceResolutionOrderInImportDeclaration_file1');
    file1.foo();
          ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof "externalModuleRefernceResolutionOrderInImportDeclaration_file1"'.
    file1.bar();
    
    
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file1.ts (0 errors) ====
    export function foo() { };
    
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file2.ts (0 errors) ====
    declare module "externalModuleRefernceResolutionOrderInImportDeclaration_file1" {
        export function bar();
    }
    
    